src/objects/CPQ_Maintenance_and_SSP_Rule__c.object
<CustomObject>
    <description>This object contains Maintenance and SSP rules details with discount percentage for Entrprise CPQ</description>
    <fields>
        <fullName>Biennial_SRS_Discount__c</fullName>
        <label>Biennial SRS Discount</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biennial_SSP_Discount__c</fullName>
        <label>Biennial SSP Discount</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Y1__c</fullName>
        <label>Service Rate % Y1</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Y2__c</fullName>
        <label>Service Rate % Y2</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unlimited_SRS_Discount__c</fullName>
        <label>Unlimited SRS Discount</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unlimited_SSP_Discount__c</fullName>
        <label>Unlimited SSP Discount</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <label>CPQ Maintenance and SSP Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Maintenance_Level__c</columns>
        <columns>Maintenance_Type__c</columns>
        <columns>Maintenance_Category__c</columns>
        <columns>Service_Rate_Y1__c</columns>
        <columns>Service_Rate_Y2__c</columns>
        <columns>Unlimited_SSP_Discount__c</columns>
        <columns>Biennial_SSP_Discount__c</columns>
        <columns>Unlimited_SRS_Discount__c</columns>
        <columns>Biennial_SRS_Discount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Maint-{00000}</displayFormat>
        <label>CPQ Maintenance and SSP Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Maintenance and SSP Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>